--- a/.env.defaults
+++ b/.env.defaults
@@ -9,6 +9,8 @@ RETICULUM_SERVER="dev.reticulum.io"
 
 BACKEND_SERVER="https://backend.com"
 
+BACKEND_ENDPOINT_PERMISSIONS="/permissions"
+
 # CORS proxy.
 CORS_PROXY_SERVER="hubs-proxy.com"
 
