--- a/.env.defaults
+++ b/.env.defaults
@@ -8,8 +8,9 @@ SHORTLINK_DOMAIN="hub.link"
 RETICULUM_SERVER="dev.reticulum.io"
 
 BACKEND_SERVER="https://backend.com"
-
-BACKEND_ENDPOINT_PERMISSIONS="/permissions"
+BACKEND_ENDPOINT_PERMISSIONS=
+BACKEND_ENDPOINT_REFRESH_ACCESS_TOKEN=
+SIGNIN="http://localhost"
 
 # CORS proxy.
 CORS_PROXY_SERVER="hubs-proxy.com"
@@ -26,3 +27,4 @@ NON_CORS_PROXY_DOMAINS="hubs.local,dev.reticulum.io,hubs-upload-cdn.com"
 
 # The root URL under which Hubs expects static assets to be served.
 BASE_ASSETS_PATH=/
+
